# PMPSolver

./: .gitignore  CMakeLists.txt  GAP_intern_p_26_GAP.txt  PACA_TB_v2.txt  PACA_new_RSSV_v2.txt  PACA_output.txt  PACA_output_2.txt  PACA_v3_p=335.txt  README.md  TEST.txt  config.toml  configt.toml  cplex_initial_sol_p_26_CPLEX.txt  cplex_initial_sol_vars_CPMP_Vars_Cont_p_26_CPLEX.txt  gap.csv  large_PMP.manpage  outfile.txt_p_5_VNS_CPMP.txt  outfile.txt_results_VNS_CPMP.csv  random_incode_calculation.txt  random_precalculated.txt  slurm-892016_0.out  slurm-892016_1.out  slurm-892016_2.out  slurm-892016_3.out  slurm-892016_4.out  slurm-892181_0.out  slurm-892181_1.out  slurm-892181_2.out  slurm-892181_3.out  slurm-892181_4.out  slurm-892265_0.out  slurm-892265_1.out  slurm-892265_2.out  slurm-892265_3.out  slurm-902007_0.out  slurm-902007_1.out  slurm-902007_10.out  slurm-902007_11.out  slurm-902007_12.out  slurm-902007_13.out  (+108 more)
cmake/: FindCplex.cmake
console/: console_lycee_p_246.txt  console_lycee_p_281.txt  console_mat_EXACT_CPMP__p_30.txt
data/: Model_Xk.jl
data/PACA_Jul24/: cust_weights_PACA_filtered_Jul24.txt  loc_capacities_cap_cinema_Jul24.txt  loc_capacities_cap_terrainsGJ_Jul24.txt  loc_coverages_2037_canton.txt  loc_coverages_2037_commune.txt  loc_coverages_EPCI.txt  loc_coverages_EPCI_reindexed.txt  loc_coverages_arrond.txt  loc_coverages_arrond_reindexed.txt  loc_coverages_canton.txt  loc_coverages_canton_reindexed.txt  loc_coverages_commune.txt  loc_coverages_commune_reindexed.txt
data/PACA_jul24/: cust_weights_PACA_2037.txt  cust_weights_PACA_2037_constant.txt  cust_weights_PACA_2037_increase.txt  cust_weights_PACA_2037_shuffle.txt  loc_capacities_cap_cinema_2037.txt  loc_capacities_cap_terrainsGJ_2037.txt  loc_capacities_cap_urgenc_2037.txt  loc_coverages_EPCI_2037.txt  loc_coverages_arrond_2037.txt  loc_coverages_canton_2037.txt  loc_coverages_commune_2037.txt
data/toulon/: capacities.txt  customers.txt  distances.txt  loc_capacities.txt  matrice_dist_toulon.csv  pts_origines_toulon.csv  weights.txt
outputs/: PACA_new_RSSV.txt  PACA_new_RSSV_v2.txt  PACA_v2_RSSV_p100_v2.txt  PACA_v2_RSSV_p160.txt  PACA_v2_p100_v2.txt
outputs/reports/: gap_Bin_service_SJC1_p_10_EXACT_CPMP_BIN.csv  gap_Bin_service_SJC1_p_10_RSSV_EXACT_CPMP_BIN.csv  gap_Bin_service_SJC2_p_15_EXACT_CPMP_BIN.csv  gap_Bin_service_SJC2_p_15_RSSV_EXACT_CPMP_BIN.csv  gap_Bin_service_SJC3a_p_25_RSSV_EXACT_CPMP_BIN.csv  gap_Bin_service_SJC4a_p_30_EXACT_CPMP_BIN.csv  gap_Bin_service_SJC4a_p_30_RSSV_EXACT_CPMP_BIN.csv  gap_Bin_service_SJC4a_p_30_RSSV_EXACT_CPMP_BIN_POSTOPT.csv  (+41 more)
parameters/: config_paca_lycee.toml  config_paca_mat.toml  config_paca_poste.toml  config_paca_urgenc.toml  config_random_144.toml  config_toulon.toml
provided/: Model_Xk.jl
results/: test_paca_poste_p_681_mode_2.txt  test_paca_poste_p_681_mode_2_ants.txt  test_paca_poste_p_681_mode_8.txt  test_poste_p_681_8.txt  test_random_144_CPMP_Cont_VarsValues_p_5_mode_8.txt  test_random_144_p_10_mode_2.txt  test_random_144_p_10_mode_8.txt  test_random_144_p_12_mode_8.txt  test_random_144_p_4_mode_2.txt  test_random_144_p_4_mode_8.txt  test_random_144_p_5_mode_2.txt  test_random_144_p_5_mode_8.txt  test_random_144_p_6_mode_2.txt  test_toulon_p_5_mode_10.txt  test_toulon_p_5_mode_11.txt  test_toulon_p_5_mode_2.txt  test_toulon_p_5_mode_8.txt  test_toulon_p_6_mode_10.txt
scripts/: Loading weights.cpp  create_capacities.py  filter_lit.txt  filter_lit_tmp.txt  label_weights.py  merge_matrix.py  merge_weights.py  paca_update.sh  save_outputs_cluster.sh  send_code_to_cluster.sh  solve.sh  solve_all.sh  solve_cap.sh  solve_lycee.sh  solve_mat.sh  solve_mat_urgenc.sh  solve_personalized.sh  solve_poste.sh  solve_rand.sh  solve_random.sh  solve_test.sh  solve_unique.sh  solve_urgenc.sh  test.sh  test_cluster.sh  test_coverages_cluster.sh  test_coverages_rssv_cluster.sh  test_coverages_rssv_cluster_2.sh  test_grid.sh  test_lit.sh  test_paca.sh  test_paca_cluster.sh  test_paca_local.sh  test_paca_old.sh  test_params_lit.sh  test_pmp.sh  test_random_local.sh  test_unique_local.sh  tets_comb.sh  utils.sh
solutions/: PACA_v2_p100.txt  PACA_v2_p100_v3.txt  PACA_v2_p160.txt  PACA_v3_p=174.txt  PACA_v3_p=174_v1.txt  PACA_v3_p=335.txt  PACA_v3_p=352.txt  PACA_v3_p=37.txt  PACA_v3_p=478.txt  PACA_v3_p=60.txt  PACA_v4_p=174.txt  PACA_v4_p=335.txt  PACA_v4_p=352.txt  PACA_v4_p=37.txt  PACA_v4_p=478.txt  PACA_v4_p=60.txt  console_cap_174.txt  output  output_p_5_mode_0.txt  paca_v3_cap_p=37.txt  paca_v3_cap_p=60.txt  paca_v3_p=681.txt  test_all_results.csv  test_combinations_toulon_CPMP_Vars_Cont_p_5_RSSV_EXACT_CPMP.txt  test_combinations_toulon_Cont_EXACT_PMP.csv  test_combinations_toulon_Cont_RSSV_EXACT_CPMP.csv  test_combinations_toulon_PMP_Vars_Cont_p_5_EXACT_PMP.txt  test_combinations_toulon_p_5_EXACT_PMP.txt  test_combinations_toulon_p_5_RSSV.txt  test_combinations_toulon_p_5_TB_PMP.txt  test_combinations_toulon_p_5_VNS_PMP.txt  test_combinations_toulon_results_EXACT_PMP.csv  test_combinations_toulon_results_RSSV.csv  test_combinations_toulon_results_RSSV_VNS_CPMP.csv  test_combinations_toulon_results_TB_PMP.csv  test_combinations_toulon_results_VNS_CPMP.csv  test_combinations_toulon_results_VNS_PMP.csv  test_lit_cpmp01_p_5_CPMP_Vars_Cont_p_5_EXACT_CPMP.txt  test_lit_cpmp01_p_5_Cont_EXACT_CPMP.csv  test_lit_cpmp01_p_5_p_5_EXACT_CPMP.txt  (+42 more)
src/: PMP.cpp  PMP.hpp  PostOptimization.cpp  PostOptimization.hpp  RSSV.cpp  RSSV.hpp  TB.cpp  TB.hpp  TBPercentage.cpp  TBPercentage.hpp  VNS.cpp  VNS.hpp  config_parser.cpp  config_parser.hpp  globals.cpp  globals.hpp  instance.cpp  instance.hpp  main.cpp  parsing.cpp  parsing.hpp  post_optimization.cpp  post_optimization.hpp  semaphore.hpp  solution.cpp  solution.hpp  solution_cap.cpp  solution_cap.hpp  solution_map.hpp  solution_std.cpp  solution_std.hpp  solver_config.cpp  solver_config.hpp  solver_manager.cpp  solver_manager.hpp  types.hpp  utils.cpp  utils.hpp
(+455 files in other folders)
